--- a/config/7.7.0/common.yaml
+++ b/config/7.7.0/common.yaml
@@ -10,6 +10,7 @@ console:
         strategy:
           type: Recreate
         triggers:
+          #[[if not .Console.OmitImageStream]]
           - type: ImageChange
             imageChangeParams:
               automatic: true
@@ -19,6 +20,7 @@ console:
                 kind: ImageStreamTag
                 namespace: openshift
                 name: "[[.Console.Image]]:[[.Console.ImageTag]]"
+          #[[end]]
           - type: ConfigChange
         replicas: [[.Console.Replicas]]
         selector:
@@ -36,7 +38,7 @@ console:
             terminationGracePeriodSeconds: 60
             containers:
               - name: "[[.ApplicationName]]-[[.Console.Name]]"
-                image: "[[.Console.Image]]"
+                image: "[[.Console.ImageURL]]"
                 imagePullPolicy: Always
                 resources:
                   limits:
@@ -345,6 +347,7 @@ smartRouter:
             maxUnavailable: 0
           type: Rolling
         triggers:
+          #[[if not .SmartRouter.OmitImageStream]]
           - type: ImageChange
             imageChangeParams:
               automatic: true
@@ -354,6 +357,7 @@ smartRouter:
                 kind: ImageStreamTag
                 namespace: "openshift"
                 name: "[[.SmartRouter.Image]]:[[.SmartRouter.ImageTag]]"
+          #[[end]]
           - type: ConfigChange
         replicas: [[.SmartRouter.Replicas]]
         selector:
@@ -371,7 +375,7 @@ smartRouter:
             terminationGracePeriodSeconds: 60
             containers:
               - name: "[[.ApplicationName]]-smartrouter"
-                image: "[[.SmartRouter.Image]]"
+                image: "[[.SmartRouter.ImageURL]]"
                 imagePullPolicy: Always
                 resources:
                   limits:
@@ -492,6 +496,7 @@ servers:
               maxUnavailable: 0
             type: Rolling
           triggers:
+            #[[if not .OmitImageStream]]
             - type: ImageChange
               imageChangeParams:
                 automatic: true
@@ -501,6 +506,7 @@ servers:
                   kind: "[[.From.Kind]]"
                   namespace: "[[.From.Namespace]]"
                   name: "[[.From.Name]]"
+            #[[end]]
             - type: ConfigChange
           replicas: [[.Replicas]]
           selector:
@@ -519,7 +525,7 @@ servers:
               terminationGracePeriodSeconds: 90
               containers:
                 - name: "[[.KieName]]"
-                  image: "[[.From.Name]]"
+                  image: "[[.ImageURL]]"
                   imagePullPolicy: Always
                   lifecycle:
                     postStart:
