[RHPAM-2684] Update csv-gen
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

--- a/deploy/catalog_resources/community/1.4/kiecloud-operator.1.4.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/community/1.4/kiecloud-operator.1.4.0.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:1.4.0
-    createdAt: "2020-02-17 12:02:25"
+    createdAt: "2020-02-18 14:53:25"
     description: Kie Cloud Operator for deployment and management of RHPAM/RHDM environments.
     repository: https://github.com/kiegroup/kie-cloud-operator
     support: Red Hat, Inc.
@@ -111,6 +111,18 @@ spec:
     mediatype: image/svg+xml
   install:
     spec:
+      clusterPermissions:
+      - rules:
+        - apiGroups:
+          - console.openshift.io
+          resources:
+          - consolelinks
+          verbs:
+          - get
+          - create
+          - update
+          - delete
+        serviceAccountName: kie-cloud-operator
       deployments:
       - name: kie-cloud-operator
         spec:
@@ -167,34 +179,22 @@ spec:
                 - name: PAM_SMARTROUTER_IMAGE_7.7.0
                   value: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.7.0
                 - name: OSE_CLI_IMAGE_7.7.0
-                  value: registry.redhat.io/openshift3/ose-cli@sha256:7e356132f56fc4e3cf691ba5b0b5f063dc974c4cfe2f198c8c1b5f68cb9ccbdd
+                  value: registry.redhat.io/openshift3/ose-cli:v3.11
                 - name: MYSQL_PROXY_IMAGE_7.7.0
-                  value: registry.redhat.io/rhscl/mysql-57-rhel7@sha256:9a781abe7581cc141e14a7e404ec34125b3e89c008b14f4e7b41e094fd3049fe
+                  value: registry.redhat.io/rhscl/mysql-57-rhel7:latest
                 - name: POSTGRESQL_PROXY_IMAGE_7.7.0
-                  value: registry.redhat.io/rhscl/postgresql-10-rhel7@sha256:de3ab628b403dc5eed986a7f392c34687bddafee7bdfccfd65cecf137ade3dfd
+                  value: registry.redhat.io/rhscl/postgresql-10-rhel7:latest
                 - name: DATAGRID_IMAGE_7.7.0
-                  value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift@sha256:cfd8c4ac1c495b766dd3ff1a85c35afe092858f8f65b52a5b044811719482236
+                  value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.3
                 - name: BROKER_IMAGE_7.7.0
-                  value: registry.redhat.io/amq7/amq-broker@sha256:49adf926658cee75dafbb463cfc7b4f9a533d5f34c0e1622709263a5f64f8b1b
+                  value: registry.redhat.io/amq7/amq-broker:7.5
                 - name: OAUTH_PROXY_IMAGE
-                  value: registry.redhat.io/openshift3/oauth-proxy@sha256:cd284eeb883b549c4578a1a07b1ee58ccbd0c8b62c0678a981b5ed65a6cf1c16
+                  value: registry.redhat.io/openshift3/oauth-proxy:v3.11
                 image: quay.io/kiegroup/kie-cloud-operator:1.4.0
                 imagePullPolicy: Always
                 name: kie-cloud-operator
                 resources: {}
               serviceAccountName: kie-cloud-operator
-      clusterPermissions:
-      - rules:
-        - apiGroups:
-          - console.openshift.io
-          resources:
-          - consolelinks
-          verbs:
-          - get
-          - create
-          - update
-          - delete
-        serviceAccountName: kie-cloud-operator
       permissions:
       - rules:
         - apiGroups:
@@ -287,17 +287,17 @@ spec:
     name: rhpam-process-migration-rhel8
   - image: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.7.0
     name: rhpam-smartrouter-rhel8
-  - image: registry.redhat.io/openshift3/oauth-proxy@sha256:cd284eeb883b549c4578a1a07b1ee58ccbd0c8b62c0678a981b5ed65a6cf1c16
+  - image: registry.redhat.io/openshift3/oauth-proxy:v3.11
     name: oauth-proxy
-  - image: registry.redhat.io/openshift3/ose-cli@sha256:7e356132f56fc4e3cf691ba5b0b5f063dc974c4cfe2f198c8c1b5f68cb9ccbdd
+  - image: registry.redhat.io/openshift3/ose-cli:v3.11
     name: ose-cli
-  - image: registry.redhat.io/rhscl/mysql-57-rhel7@sha256:9a781abe7581cc141e14a7e404ec34125b3e89c008b14f4e7b41e094fd3049fe
+  - image: registry.redhat.io/rhscl/mysql-57-rhel7:latest
     name: mysql-57-rhel7
-  - image: registry.redhat.io/rhscl/postgresql-10-rhel7@sha256:de3ab628b403dc5eed986a7f392c34687bddafee7bdfccfd65cecf137ade3dfd
+  - image: registry.redhat.io/rhscl/postgresql-10-rhel7:latest
     name: postgresql-10-rhel7
-  - image: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift@sha256:cfd8c4ac1c495b766dd3ff1a85c35afe092858f8f65b52a5b044811719482236
+  - image: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.3
     name: datagrid73-openshift
-  - image: registry.redhat.io/amq7/amq-broker@sha256:49adf926658cee75dafbb463cfc7b4f9a533d5f34c0e1622709263a5f64f8b1b
+  - image: registry.redhat.io/amq7/amq-broker:7.5
     name: amq-broker
   replaces: kiecloud-operator.1.3.0
   selector:
